# pzp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_parser.py
cpp/: CMakeLists.txt  decompress.h  eloWriter.cpp  eloWriter.h  parallelParser.cpp  parallelParser.h  parquetReader.cpp  parquetWriter.cpp  parquetWriter.h  parseMoves.cpp  parseMoves.h  parser.h  parserPool.h  pgnzstparser.pyx  utils.cpp
pgnzstparser/: parallelParser.cpp  parquetReader.cpp  parquetWriter.h  pgnzstparser.pyx  utils.h
src/pzp/: __init__.py  decompress.cpp  eloWriter.h  parquetReader.h  parquetWriter.cpp  parseMoves.h  parser.h  pgnzstparser.pyx
test/: list.txt  test.py
