[build-system]
requires = [
    "setuptools>=74.1",
    "wheel",
    "Cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pzp"
version = "0.1.0"
description = "A module for parsing PGN files contained in Zstandard-compressed archives and storing them in Parquet format"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Michael Horgan"}
]
dependencies = []

[tool.cython]
language_level = "3"
